# pyNeuroMatic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.md.old  mypy_errors.txt  mypy_errors_after.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  ci.yml.old  tests-core.yml  tests-gui.yml
NMPY/: NM_Experiment.py  NM_Main.py  NM_WavePrefix.py  __init__.py  __main__.py  nm_channel.py  nm_configs.py  nm_container.py  nm_container2.py  nm_data.py  nm_data_test.py  nm_dataprefix.py  nm_dataseries.py  nm_dataseries_set.py  nm_dataseries_test.py  nm_dataset.py  nm_dimension.py  nm_dimensions.py  nm_epoch.py  nm_epoch_set.py  nm_epochset.py  nm_eset.py  nm_experiment.py  nm_file.py  nm_folder.py  nm_manager.py  nm_manager_test.py  nm_note.py  nm_object.py  nm_object_container.py  nm_object_container_test.py  nm_object_mapping.py  nm_object_mapping_test.py  nm_object_test.py  nm_preferences.py  nm_project.py  nm_project_test.py  nm_scale.py  nm_scale_test.py  nm_sets.py  (+15 more)
nmpy/: nm_channel_test.py  nm_dataseries.py  nm_epoch_test.py  nm_folder.py  nm_manager.py  nm_object_container_test.py  nm_preferences.py  nm_utilities_test.py  x_orderedset_test.py
pip-wheel-metadata/pyNeuroMatic-0.0.1.dist-info/: METADATA  top_level.txt
pyneuromatic/: __init__.py  mytestfile.hdf5  nm_channel.py  nm_data.py  nm_dataseries.py  nm_dimension.py  nm_epoch.py  nm_folder.py  nm_folder_test.py  nm_manager.py  nm_object.py  nm_object_container.py  nm_preferences.py  nm_project.py  nm_scale.py  nm_sets.py  nm_stats.py  nm_test.py  nm_test_all.py  nm_tool.py  nm_tool_folder.py  nm_tool_stats.py  nm_utilities.py  x_orderedset.py  xnm_note.py  xnm_object_container.py  xnm_set.py
pyneuromatic/analysis/: __init__.py  nm_main_op.py  nm_pulse.py  nm_pulse_func.py  nm_stat_func.py  nm_stat_utilities.py  nm_stat_win.py  nm_tool.py  nm_tool_event.py  nm_tool_fit.py  nm_tool_folder.py  nm_tool_main.py  nm_tool_pulse.py  nm_tool_spike.py  nm_tool_stats.py  nm_tool_utilities.py
pyneuromatic/core/: __init__.py  nm_channel.py  nm_command_history.py  nm_configurations.py  nm_data.py  nm_dataseries.py  nm_dimension.py  nm_epoch.py  nm_folder.py  nm_group.py  nm_history.py  nm_manager.py  nm_math.py  nm_notes.py  nm_object.py  nm_object_container.py  nm_preferences.py  nm_project.py  nm_scale.py  nm_sets.py  nm_tool_registry.py  nm_transform.py  nm_utilities.py  nm_workspace.py
pyneuromatic/gui/: __init__.py
pyneuromatic/io/: __init__.py  abf.py  axograph.py  base.py  igor_text.py  pxp.py
pyneuromatic/tools/: __init__.py  nm_conductance.py  nm_main_op.py  nm_model.py  nm_pulse.py  nm_pulse_func.py  nm_stat_func.py  nm_stat_utilities.py  nm_stat_win.py  nm_tool.py  nm_tool_config.py  nm_tool_event.py  nm_tool_fit.py  nm_tool_main.py  nm_tool_model.py  nm_tool_pulse.py  nm_tool_spike.py  nm_tool_stats.py
tests/: __init__.py  nmFolder0.hdf5  nm_channel_test.py  nm_data_test.py  nm_dataseries_test.py  nm_dimension_test.py  nm_epoch_test.py  nm_folder_test.py  nm_manager_test.py  nm_object_container_test.py  nm_object_test.py  nm_project_test.py  nm_scale_test.py  nm_sets_test.py  nm_stats_test.py  nm_test.py  nm_test_all.py  nm_utilities_test.py  x_orderedset_test.py  xnm_object_container_test.py
tests/test_analysis/: test_nm_pulse_func.py  test_nm_stat_func.py  test_nm_stat_igor.py  test_nm_stat_utilities.py  test_nm_stat_win.py  test_nm_stats.py  test_nm_stats_igor.py  test_nm_tool.py  test_nm_tool_config.py  test_nm_tool_event.py  test_nm_tool_fit.py  test_nm_tool_folder.py  test_nm_tool_main.py  test_nm_tool_pulse.py  test_nm_tool_spike.py  (+2 more)
(+54 files in other folders)
