[metadata]
name = PyNeuroMatic
version = 0.0.1
author = Jason Rothman
author_email = j.rothman@ucl.ac.uk
url = https://github.com/jasonsethrothman/pyneuromatic/
license = GPL-3.0-only
description = NeuroMatic in Python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
install_requires =
    typing; python_version<"3.5"
    numpy
    h5py

packages = find:

[options.packages.find]
where = .
include = pyneuromatic*

[options.package_data]
* =
        lib/*.jar
        *.xml
        *.html
        *.md
        *.xsl
        *.hoc

dev =
    PyNeuroMatic[all]
    pytest
    pytest-cov
    pre-commit


[flake8]
extend-ignore = E501, E502, F403, F405, W503, W504
