[metadata]
name = pyNeuroMatic
version = 0.0.1
author = Jason Rothman
author_email = j.rothman@ucl.ac.uk
url = https://github.com/SilverLabUCL/pyNeuroMatic
license = MIT
description = A collection of Python tools for acquiring, analysing and simulating electrophysiological data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

[options]
install_requires =
    numpy
    h5py
    colorama
    tomli;python_version<"3.11"
    tomli-w

packages = find:

[options.packages.find]
where = .
include = pyneuromatic*

[options.package_data]
* =
        lib/*.jar
        *.xml
        *.html
        *.md
        *.xsl
        *.hoc

[options.extras_require]
igor =
    igor2
gui =
       PyQt6>=6.5
dev =
    pytest
    pytest-cov
    pytest-qt  # for GUI testing
    pre-commit
    black
    isort
    flake8
    mypy


[flake8]
extend-ignore = E501, E502, F403, F405, W503, W504
